--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="src/components/Full-AheadLogo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Full Ahead Ship Management - Experts in offshore & main-fleet vessel management, procurement management, and maritime consultancy services." />
-    <title>Full Ahead Ship Management | Offshore & Main-Fleet Experts</title>
+    <meta name="description" content="Full Ahead Marine & Offshore PVT. LTD. - Experts in offshore & main-fleet vessel management, procurement management, and maritime consultancy services." />
+    <title>Full Ahead Marine & Offshore PVT. LTD. | Offshore & Main-Fleet Experts</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
