--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="src/components/Full-AheadLogo.jpg" />
+    <link rel="icon" href="/images/Full-AheadLogo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Full Ahead Marine & Offshore PVT. LTD. - Experts in offshore & main-fleet vessel management, procurement management, and maritime consultancy services." />
     <title>Full Ahead Marine & Offshore PVT. LTD. | Offshore & Main-Fleet Experts</title>
